// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`formatArchetypesListOutput snapshots > all packs invalid — zero archetypes with warnings 1`] = `
{
  "stderr": "Warning: pack 'pack-a' missing from store
Warning: pack 'pack-b' has invalid manifest",
  "stdout": "No archetypes available. Check warnings above for details.",
}
`;

exports[`formatArchetypesListOutput snapshots > archetypes with warnings for degraded packs 1`] = `
{
  "stderr": "Warning: pack 'missing-pack' missing from store
Warning: pack 'corrupt-pack' has invalid manifest",
  "stdout": "valid-pack:component",
}
`;

exports[`formatArchetypesListOutput snapshots > multiple archetypes from multiple packs, no warnings 1`] = `
{
  "stderr": "",
  "stdout": "api-kit:controller
api-kit:service
react-starter:component
react-starter:hook
react-starter:page
shared-utils:util",
}
`;

exports[`formatArchetypesListOutput snapshots > no packs installed 1`] = `
{
  "stderr": "",
  "stdout": "No packs installed. Use \`scaffoldix pack add <path>\` first.",
}
`;

exports[`formatArchetypesListOutput snapshots > single archetype, no warnings 1`] = `
{
  "stderr": "",
  "stdout": "my-pack:default",
}
`;

exports[`formatCheckReport snapshots > all passed 1`] = `"Checks: total=3 passed=3 failed=0 duration=999ms"`;

exports[`formatCheckReport snapshots > one failed 1`] = `"Checks: total=2 passed=1 failed=1 duration=5.00s"`;

exports[`formatGenerateOutput snapshots > dry-run with patches skipped for dry-run 1`] = `
"Dry run: no files were written.

Generated from: my-pack:component
Target: /project/src
2 files would be created

  (planned) Component.tsx
  (planned) Component.test.tsx

Dry run: patches were not applied."
`;

exports[`formatGenerateOutput snapshots > dry-run with planned files 1`] = `
"Dry run: no files were written.

Generated from: my-pack:component
Target: /project/src
2 files would be created

  (planned) Component.tsx
  (planned) Component.test.tsx"
`;

exports[`formatGenerateOutput snapshots > generation with check report 1`] = `
"Generated from: my-pack:component
Target: /project/src
2 files created

  Component.tsx
  Component.test.tsx

Checks: total=3 passed=3 failed=0 duration=5.68s"
`;

exports[`formatGenerateOutput snapshots > generation with checks skipped by flag 1`] = `
"Generated from: my-pack:component
Target: /project/src
2 files created

  Component.tsx
  Component.test.tsx

Checks skipped (--skip-checks)."
`;

exports[`formatGenerateOutput snapshots > generation with hook report 1`] = `
"Generated from: my-pack:component
Target: /project/src
2 files created

  Component.tsx
  Component.test.tsx

Hooks: total=2 succeeded=2 failed=0 duration=1.23s"
`;

exports[`formatGenerateOutput snapshots > generation with overwritten files (force mode) 1`] = `
"Generated from: my-pack:component
Target: /project/src
2 files created

Force mode active — overwriting existing files:
  Overwriting: Component.tsx

  Component.tsx
  Component.test.tsx"
`;

exports[`formatGenerateOutput snapshots > generation with patch report 1`] = `
"Generated from: my-pack:component
Target: /project/src
2 files created

  Component.tsx
  Component.test.tsx

Patches: total=2 applied=1 skipped=1 failed=0
  [APPLIED] marker_insert src/app.ts (add-import)
  [SKIPPED] append_if_missing README.md (add-badge) (already applied)"
`;

exports[`formatGenerateOutput snapshots > generation with patches skipped by flag 1`] = `
"Generated from: my-pack:component
Target: /project/src
2 files created

  Component.tsx
  Component.test.tsx

Patches skipped (--skip-patches)."
`;

exports[`formatGenerateOutput snapshots > large file list (> 20) shows truncated output 1`] = `
"Generated from: my-pack:component
Target: /project/src
25 files created

  file0.ts
  file1.ts
  file2.ts
  file3.ts
  file4.ts
  file5.ts
  file6.ts
  file7.ts
  file8.ts
  file9.ts
  ... and 10 more
  file20.ts
  file21.ts
  file22.ts
  file23.ts
  file24.ts"
`;

exports[`formatGenerateOutput snapshots > normal generation with 2 files 1`] = `
"Generated from: my-pack:component
Target: /project/src
2 files created

  Component.tsx
  Component.test.tsx"
`;

exports[`formatHookReport snapshots > all succeeded under 1s 1`] = `"Hooks: total=2 succeeded=2 failed=0 duration=456ms"`;

exports[`formatHookReport snapshots > partial failure over 1s 1`] = `"Hooks: total=3 succeeded=2 failed=1 duration=2.35s"`;

exports[`formatPackInfoOutput snapshots > git pack with single archetype 1`] = `
"Pack: git-pack
Version: 3.0.0
Origin: git:https://github.com/org/repo#v3.0.0
Store path: /store/git-pack/deadbeef
Installed at: 2024-09-01T12:00:00.000Z
Hash: deadbeefdeadbeefdeadbeefdeadbeefdeadbeefdeadbeefdeadbeefdeadbeef

Archetypes:
  - default"
`;

exports[`formatPackInfoOutput snapshots > local pack with two archetypes 1`] = `
"Pack: my-pack
Version: 1.2.3
Origin: local:/home/user/pack
Store path: /home/user/.local/share/scaffoldix/packs/my-pack/abc123
Installed at: 2024-06-15T14:30:00.000Z
Hash: abc123def456abc123def456abc123def456abc123def456abc123def456abc1

Archetypes:
  - api
  - web"
`;

exports[`formatPackInfoOutput snapshots > npm scoped pack with many archetypes 1`] = `
"Pack: @myorg/full-stack
Version: 5.1.0
Origin: npm:@myorg/full-stack
Store path: /store/@myorg__full-stack/cafebabe
Installed at: 2024-11-20T09:45:00.000Z
Hash: cafebabecafebabecafebabecafebabecafebabecafebabecafebabecafebabe

Archetypes:
  - backend
  - frontend
  - database
  - infra"
`;

exports[`formatPackListOutput snapshots > empty list — no registry 1`] = `"No packs installed. Use \`scaffoldix pack add <path>\` to install one."`;

exports[`formatPackListOutput snapshots > multiple packs with varied origins — columns are aligned 1`] = `
"PACK              VERSION   ORIGIN
----------------------------------
alpha             1.0.0     local:/a
longer-pack-name  10.20.30  git:https://github.com/org/repo#main
scoped            2.0.0     npm:@org/scoped-pack"
`;

exports[`formatPackListOutput snapshots > single local pack 1`] = `
"PACK      VERSION  ORIGIN
-------------------------
my-pack   1.0.0    local:/home/user/my-pack"
`;

exports[`formatPatchReport snapshots > all applied 1`] = `
"Patches: total=2 applied=2 skipped=0 failed=0
  [APPLIED] marker_insert app.ts (k1)
  [APPLIED] marker_replace app.ts (k2)"
`;

exports[`formatPatchReport snapshots > empty entries 1`] = `"Patches: total=0 applied=0 skipped=0 failed=0"`;

exports[`formatPatchReport snapshots > mixed applied/skipped/failed 1`] = `
"Patches: total=3 applied=1 skipped=1 failed=1
  [APPLIED] marker_insert a.ts (k1)
  [SKIPPED] append_if_missing b.ts (k2) (already applied)
  [FAILED] marker_replace c.ts (k3) (marker not found)"
`;

exports[`formatTraceOutput snapshots > formats multi-phase trace with alignment 1`] = `
"  resolve pack      12ms
  load manifest     34ms
  render templates  1.23s
  apply patches     567ms
  ────────────────────────────
  Completed in 1.85s"
`;

exports[`formatTraceOutput snapshots > handles in-progress phase (no durationMs) 1`] = `
"  resolve pack      5ms
  render templates  (in progress)
  ────────────────────────────
  Completed in 5ms"
`;

exports[`formatTraceOutput snapshots > returns empty array for empty trace 1`] = `[]`;
